# babylon_features

./: .dockerignore  .gitignore  Agent.md  Dockerfile  README.md  Vector-Database-Refactor.md  agent.md  artifact_upload.py  check_chroma_connection.py  check_mongo_connection.py  create_synthetic_embeddings.py  daemon.py  dev.py  docker-image-build.sh  docker-image-start.sh  fetch_synthetic_embeddings.py  gemini_agent_start.py  main.py  pyproject.toml  requirements.txt  test_chroma.py  test_datalake.py  tox.ini  visualize.py
.gemeni/: config.yaml
.github/actions/setup-tox/: action.yml
.github/workflows/: artifact-cd.yml  artifact_cd.yml  babylon-features.yml
agent/: __init__.py  agent_harness.py  error.py  event.py  gemini_agent.py  listener.py  load_harness.py  utils.py
agent/gemini/: _harness.py  event.py  harness.py  listener.py  load.py
agent/tests/: test_observer.py
agent/tests/gemini/: test_gemini_agent.py
datalake/: mongo_factory.py  repository.py  uow.py
docs/: Agent-Devops.md  upload-artifact.md
docs/agent/: Agent.md  run-features.md
features/: logger.py  processor.py  utils.py
features/config/: config.py  configuration_loaders.py  hashicorp.py
features/datalake/: mongo_factory.py  repository.py  uow.py
features/domain/: __init__.py  cleaned_documents.py  data_category.py  dataset.py  prompt.py
features/domain/base/: __init__.py  vector.py
features/pipeline/: __init__.py  end_to_end_data.py  generate_datasets.py  generate_features.py
features/rag/documents/: document_builder.py
features/steps/dataset_generation/: __init__.py  create_prompts.py  generate_instruction_dataset.py  push_to_huggingface.py  query_feature_store.py
features/steps/feature_generation/: chunk_and_embed.py  load_vectors.py  query_data_lake.py
features/tools/: run.py
features/vectorstore/: vectorstore.py
features_pipeline/: __init__.py  datalake.py  datalake_old.py  document_manager.py  error.py  generate_features.py  logger.py  processor.py  stats.py  timeout.py  utils.py  vectorstore.py
features_pipeline/config/: config.py  configuration_loaders.py  confload.py  hashicorp.py
features_pipeline/process/: datalake.py  processor.py
features_pipeline/rag/: vectorstore.py
features_pipeline/rag/documents/: document_builder.py  document_manager.py  documents_collection.py
features_pipeline/rag/vectorstore/: __init__.py  chroma.py  factory.py  load.py
features_pipeline/steps/: __init__.py
features_pipeline/vectorstore/: __init__.py  chroma.py  factory.py  load.py
protos/: vecotorize.proto
tests/: conftest.py  test_configuration_loaders.py  test_confload.py  test_generate_features.py  test_processor.py  test_run.py  test_secrets_manager.py  test_vectorstore.py
tests/pipeline/: test_generate_features.py
tests/steps/: test_chunk_and_embed.py  test_clean.py  test_load_vectors.py  test_query_data_lake.py
tests/vectorstore/: test_vectorstore.py
(+8 files in other folders)
