[tool.poetry]
name = "features_pipeline"
version = "0.1.0"
description = "Babylon Features & RAG Pipeline"
authors = ["Alan Ponte <alanjponte@gmail.com>"]
readme = "README.md"
#packages = [{ include = "your_package_name" }]  # or remove if not using a package dir

[tool.poetry.dependencies]
# Old: python = "^3.12.6"  # Interpreted as <4.0.0
# New: Explicitly set the upper limit to ensure compatibility
python = ">=3.12.6, <3.13"

requests = "^2.32.5"
pymongo = "4.15.1"
unstructured-ingest = "^1.2.18"
sentence-transformers = "^5.1.1"
openai = "^2.0.0"
langchain-mongodb = "^0.7.0"
langchain-huggingface = "^0.3.1"
chromadb = "^1.1.0"
langchain-chroma = "^0.2.6"


[tool.poetry.group.test.dependencies]
black = "25.1.0"
mypy = "^1.17.1"
pylint = "3.3.7"
pytest="^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
