[tool.poetry]
name = "features_pipeline"
version = "0.1.0"
description = "Babylon Features & RAG Pipeline"
authors = ["Alan Ponte <alanjponte@gmail.com>"]
readme = "README.md"
#packages = [{ include = "your_package_name" }]  # or remove if not using a package dir

[tool.poetry.dependencies]
python = "^3.13"

requests = "^2.32.5"
pymongo = "4.15.1"
langchain-huggingface = "^0.3.1"
langchain-chroma = "^0.2.6"
langchain-core = "^0.3.79"
langchain-community = "^0.3.31"
# Secrets manager
hvac = "2.3.0"
sentence-transformers = "^5.1.1"

[tool.poetry.group.test.dependencies]
black = "25.1.0"
mypy = "^1.17.1"
pylint = "3.3.7"
pytest="^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
